Big changes, unfinished, not pushed

--- a/styles.css
+++ b/styles.css
@@ -1,276 +1,26 @@
-* {
-  box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Custom Animations */
+@keyframes float {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-20px); }
+    100% { transform: translateY(0px); }
 }
 
-.welcome-section {
-    background-color: lightskyblue;
-    color: black;
-    padding: 40px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-  }
-
-.sayhello {
-  align-items: center;
-  text-align: center;
-  color: black;
-  margin-top: 10px;
-  display: flex;
-}
-  
-.main-content {
-    background-color: #e6f7ff;
-    color: black;
-    padding: 40px;
-    text-align: left;
-  }
-  
-#contact {
-    background-color: lightskyblue;
-    color: black;
-    padding: 40px;
-    text-align: left;
-  }
-
-.footer {
-    background-color: darkblue;
-    color: gold;
-    font-style: italic;
-    padding: 40px;
-    text-align: center;
-  }
-  
-.global {
-  
-    font-family: 'Trebuchet MS', sans-serif;
-    width: 100%;
-    padding-top: 3%;
-    margin: 0;
-  }
-  
-.navbar {
-    list-style-type: none;
-    height: auto;
-    margin: 0;
-    padding: 1%;
-    text-align: right;
-    background-color: darkblue;
-    link-color: gold;
-    position: fixed;
-    width: 100%;
-    top: 0; /* Position the navbar at the top of the page */
-    z-index: 1; /* This will make it appear in front (not behind) of the memoji image */
-  }
-
-#about, #projects, #quals, #contact {
-  scroll-margin-top: 5em;
+.float-animation {
+    animation: float 6s ease-in-out infinite;
 }
 
-.navbar li {
-    display: inline;
-    font-size: 20px;
-    padding: 5px;
-    margin: 10px;
-  }
-
-li {
-    /* display: inline; */
-    font-size: 16px;
-    padding: 5px;
-    margin: 10px;
-  }
-
-#rhs {
-  padding-right: 2%;
-
+/* Glassmorphism utility */
+.glass {
+    background: rgba(15, 23, 42, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-a:link {
-    color: gold;
-    background-color: transparent;
-    text-decoration: none;
-    padding: 1%;
-  }
-a:visited {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:hover {
-    text-shadow: -1px 1px 2px gold;
-    background-color: transparent;
-    text-decoration: none;
-  }
-
-.profile-link {
-  margin-bottom: 3%;
-}
-.profile-link a:link {
-    color: darkblue;
-    background-color: transparent;
-    text-decoration: none;
-    padding: 1%;
-  }
-
-.profile-link a:visited {
-    color: blue;
-    background-color: transparent;
-    text-decoration: none;
-  }
-.profile-link a:hover {
-      text-shadow: -1px 1px 1px blue;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-.navbar:link {
-    color: gold; background-color: transparent;
-    text-decoration: none;
-    padding: 1%;
-  }
-  
-/* For mobile phones: */
-[class*="col-"] {
-width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-/* For desktop: */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-}
-
-.project-tile {
-background-color: #f2f2f2;
-width: 60%;
-border: 15px solid darkblue;
-padding: 50px;
-margin: auto;
-margin-bottom: 10px;
-text-shadow: -1px 1px 2px gold;
-color: darkblue;
-}
-
-.page {
-  background-color: #f2f2f2;
-  width: 100%;
-  padding: 0px;
-  margin: 0px;
-  }
-
-
-.title {
-  align-items: center;
-  font-size: 200%;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  padding: 10px;
-}
-
-.memoji {
-  max-height: 120px;
-  filter: drop-shadow(-5px 10px 15px black);
-
-}
-
-.icon {
-  max-width: 4%;
-  margin-top: 1%;
-}
-
-.flex-child-1 {
-  width: 10%;
-  height: 5%;
-}
-
-.flex-child-2 {
-  flex-grow: 0.4;
-  align-items: center;
-}
-
-.flex-child-3 {
-  width: 30%;
-  align-items: center;
-  text-align: center;
-}
-
-.flex-child-4 {
-  flex-grow: 0.4;
-  align-items: center;
-}
-
-/* Code from w3schools https://www.w3schools.com/howto/howto_css_two_columns.asp */
-/* Create two unequal columns that floats next to each other */
-.column {
-  float: left;
-}
-
-.left {
-  width: 70%;
-}
-
-.right {
-  width: 30%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* End Code from w3schools https://www.w3schools.com/howto/howto_css_two_columns.asp */
-
-
-.flex-child-5 {
-  width: 70%;
-}
-
-.flex-child-6 {
-  width: 30%;
-}
-
-.calendly-inline-widget {
-  filter: drop-shadow(-5px 10px 15px black);
-  margin-top: 8%;
-}
-
-.dogs {
-  width: 10%;
-  height: 10%;
-  margin: 0px 5px 0px 0px;
-  padding: 0px;
-  float: left;
-  border: 3px solid black;
-}
-
-/* Parallax guide from https://www.w3schools.com/howto/howto_css_parallax.asp */
-.parallax {
-  /* The image used */
-  background-image: url("img/rocket.png");
-
-  /* Set a specific height */
-  min-height: 100em;
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position-x: right;
-  background-repeat: no-repeat;
-  background-size: 100%;
-;
+html {
+    scroll-behavior: smooth;
 }
